--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  libvyatta-util1,
  vyatta-bash,
  vyatta-biosdevname,
+ vyatta-cfg-dhcp-relay,
+ vyatta-cfg-dhcp-server,
  vyatta-cfg-firewall,
  vyatta-cfg-op-pppoe,
  vyatta-cfg-qos,
@@ -27,6 +29,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  vyatta-cron,
  vyatta-ipv6-rtradv,
  vyatta-nat,
+ vyatta-op-dhcp-server,
  vyatta-op-firewall,
  vyatta-op-qos,
  vyatta-op-quagga,
