vyatta-config-mgmt が漏れていたので追加。

--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  vyatta-cfg-vpn,
  vyatta-cfg,
  vyatta-cluster,
+ vyatta-config-mgmt,
  vyatta-conntrack,
  vyatta-cron,
  vyatta-ipv6-rtradv,
