depends に vyatta-config-migrate を追加。

--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  vyatta-cfg,
  vyatta-cluster,
  vyatta-config-mgmt,
+ vyatta-config-migrate,
  vyatta-conntrack,
  vyatta-cron,
  vyatta-ipv6-rtradv,
