--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  vyatta-config-mgmt,
  vyatta-config-migrate,
  vyatta-conntrack,
+ vyatta-conntrack-sync,
  vyatta-cron,
  vyatta-ipv6-rtradv,
  vyatta-nat,
